Add instructions for mentor feedback form

--- a/home/templates/home/initialmentorfeedback_form.html
+++ b/home/templates/home/initialmentorfeedback_form.html
@@ -5,7 +5,25 @@ Initial mentor feedback
 {% endblock %}
 
 {% block content %}
-<h1>Feedback on Intern Effort</h1>
+<h1>Feedback on Your Intern's Effort</h1>
+
+<p>Outreachy organizers collect intern feedback from mentors three times during the Outreachy internship. Please give yourself at least 5 to 15 minutes to complete this form.</p>
+
+<h2>Instructions</h2>
+
+<p>Only one mentor can submit feedback for one intern. If you are co-mentoring an intern, please talk with your co-mentor to decide what your feedback should be.</p>
+
+<p>Once you submit this form and you mark your intern as being able to be paid, the form cannot be edited. If you ask for an extension for this internship milestone, you will be able to update the answers you've given after the extension is complete.</p>
+
+<h2>Privacy</h2>
+
+<p>Your answers will only be seen by Outreachy organizers and by Software Freedom Conservancy accounting staff. Your intern will be able to see when you submit your feedback to us, but will not be able see what the feedback is. If Outreachy organizers need to discuss your feedback with your intern, we will draft a response with you before contacting your intern.</p>
+
+<h2>Metrics for Success</h2>
+
+<p>Outreachy organizers view this internship as a fellowship. Mentors should not expect a certain project to be completed by the intern, but rather expect that the intern's work will be adjusted to the level of their ability, their interests, and the project's priorities throughout the internship. Outreachy organizers prefer not to fail people in the program as long as they are working full-time on the project.</p>
+
+<p>The most important metric for success is whether your intern is putting in a full-time, 40 hours a week effort. If an intern isn't putting in a full-time effort, we use the other metrics to come up with a plan to get the intern back on track. We also gather metrics about mentor engagement to ensure success for all Outreachy mentors.</p>
 
 <form method="post" action="">
 {% csrf_token %}
