Make form instructions and mentor dashboard consistent

--- a/home/templates/home/initialmentorfeedback_form.html
+++ b/home/templates/home/initialmentorfeedback_form.html
@@ -13,7 +13,7 @@ Initial mentor feedback
 
 <p>Only one mentor can submit feedback for one intern. If you are co-mentoring an intern, please talk with your co-mentor to decide what your feedback should be.</p>
 
-<p>Once you submit this form and you mark your intern as being able to be paid, the form cannot be edited. If you ask for an extension for this internship milestone, you will be able to update the answers you've given after the extension is complete.</p>
+<p>Once you submit this form and you mark your intern as being able to be paid, the form cannot be edited. If you ask for an extension for this internship milestone, you will be able to update your answers after the extension is complete.</p>
 
 <h2>Privacy</h2>
 
