--- a/home/templates/home/snippet/dashboard_mentor.html
+++ b/home/templates/home/snippet/dashboard_mentor.html
@@ -23,7 +23,13 @@
 			{% endif %}
 
 			<h3 id="feedback">Internship Feedback</h3>
-			<p>Outreachy organizers require <a href="/mentor/mentor-faq/#mid-point-and-final-review">mentor feedback</a> at three points during the internship. We must receive successful feedback from one mentor in order for the intern to be paid their stipends. Only one mentor can submit feedback for one intern. If you are co-mentoring an intern, please talk with your co-mentor to decide who will be submitting feedback. Mentors can only submit feedback once, so please make sure you are ready to evaluate your intern's efforts.</p>
+
+			<p>Outreachy organizers require <a href="/mentor/mentor-faq/#mid-point-and-final-review">mentor feedback</a> at three points during the internship. We must receive successful feedback from one mentor in order for the intern to be paid their stipends on time.</p>
+
+			<p>Only one mentor can submit feedback for one intern. If you are co-mentoring an intern, please talk with your co-mentor to decide what your feedback should be.</p>
+
+			<p>Once you submit your feedback form and you mark your intern as being able to be paid, the form cannot be edited. If you ask for an extension for this internship milestone, you will be able to update your answers after the extension is complete.</p>
+
 			{% if rel.intern_selection.is_initial_feedback_on_intern_open %}
 				<p><a href="{% url 'initial-mentor-feedback' username=rel.intern_selection.applicant.applicant.account.username %}"><button type="button" class="btn btn-info">Submit Initial Feedback</button></a></p>
 			{% endif %}
