--- a/home/templates/home/initialmentorfeedback_form.html
+++ b/home/templates/home/initialmentorfeedback_form.html
@@ -21,13 +21,51 @@ Initial mentor feedback
 
 <h2>Metrics for Success</h2>
 
-<p>Outreachy organizers view this internship as a fellowship. Mentors should not expect a certain project to be completed by the intern, but rather expect that the intern's work will be adjusted to the level of their ability, their interests, and the project's priorities throughout the internship. Outreachy organizers prefer not to fail people in the program as long as they are working full-time on the project.</p>
-
 <p>The most important metric for success is whether your intern is putting in a full-time, 40 hours a week effort. If an intern isn't putting in a full-time effort, we use the other metrics to come up with a plan to get the intern back on track. We also gather metrics about mentor engagement to ensure success for all Outreachy mentors.</p>
 
 <form method="post" action="">
 {% csrf_token %}
-        {% include "bootstrap_card_form.html" with form=form only %}
+{% for field in form.visible_fields %}
+	{% if 'Should your Outreachy intern be paid' in field.label_tag %}
+		<h2>Intern Payment Authorization</h2>
+	{% endif %}
+	{% if 'Does your intern need an extension' in field.label_tag %}
+		<h2>Internship Extension</h2>
+
+		<p>Outreachy organizers view this internship as a fellowship. Mentors should not expect a certain project to be completed by the intern, but rather expect that the intern's work will be adjusted to the level of their ability, their interests, and the project's priorities throughout the internship. Outreachy organizers prefer not to fail people in the program as long as they are working full-time on the project.</p>
+
+	{% endif %}
+	{% if 'On average' in field.label_tag %}
+		<div class="form-group card">
+			{{ field.errors }}
+			<div class = "card-header">
+				<label for="{{ field.id_for_label }}">{{ field.label|safe }}</label>
+			</div>
+			<div class = "card-body">
+				{{ field }}
+			</div>
+			{% if field.help_text %}
+				<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
+			{% endif %}
+		</div>
+	{% else %}
+		<div class="form-group card">
+			{{ field.errors }}
+			<div class = "card-header">
+				{{ field.label_tag }}
+			</div>
+			<div class = "card-body">
+				{{ field }}
+			</div>
+			{% if field.help_text %}
+				<div class="card-footer bg-white">{{ field.help_text }}</div>
+			{% endif %}
+		</div>
+	{% endif %} 
+{% endfor %}
+{% for hidden in form.hidden_fields %}
+	{{ hidden }}
+{% endfor %}
 <input type="submit" class="btn btn-block btn-primary" value="Submit feedback" />
 </form>
 
