Add intern feedback and display completed feedback sentence on intern and mentor dashboard

--- a/home/templates/home/snippet/dashboard_intern.html
+++ b/home/templates/home/snippet/dashboard_intern.html
@@ -51,6 +51,13 @@
 		<h2 id="feedback">Internship Feedback</h2>
 		<p>The Outreachy organizers want to ensure that all interns get the support they need from their mentors. You will be asked to provide mentor feedback on specific dates, which coincide with when your mentor is giving feedback on your internship efforts.</p>
 		<p>The feedback is private and completely optional. Your feedback about your mentors will only be seen by the Outreachy organizers. We will discuss the feedback with you before contacting your mentors about how to improve their mentorship.</p>
+
+		{% if internship.is_initial_feedback_on_intern_open %}
+			<p><a href="{% url 'initial-intern-feedback' %}"><button type="button" class="btn btn-info">Submit Initial Feedback</button></a></p>
+		{% elif rel.intern_selection.initialinternfeedback.summary %}
+			<p>Your initial feedback was submitted.</p>
+		{% endif %}
+
 		<p>Dates for you to give feedback on your mentor:
 		<ul>
 			<li>{{ internship.initial_feedback_opens }} 4pm UTC - Initial feedback forms open</li>
