--- a/home/templates/home/snippet/dashboard_mentor.html
+++ b/home/templates/home/snippet/dashboard_mentor.html
@@ -32,6 +32,8 @@
 
 			{% if rel.intern_selection.is_initial_feedback_on_intern_open %}
 				<p><a href="{% url 'initial-mentor-feedback' username=rel.intern_selection.applicant.applicant.account.username %}"><button type="button" class="btn btn-info">Submit Initial Feedback</button></a></p>
+			{% elif rel.intern_selection.initialmentorfeedback.summary %}
+				<p>Your initial feedback was submitted.</p>
 			{% endif %}
 			<p>Mentor feedback dates:
 			<ul>
