Tell interns on the dashboard their feedback form includes self-rating progress

--- a/home/templates/home/snippet/dashboard_intern.html
+++ b/home/templates/home/snippet/dashboard_intern.html
@@ -50,6 +50,7 @@
 
 		<h2 id="feedback">Internship Feedback</h2>
 		<p>The Outreachy organizers want to ensure that all interns get the support they need from their mentors. You will be asked to provide mentor feedback on specific dates, which coincide with when your mentor is giving feedback on your internship efforts.</p>
+		<p>The feedback form also collects information about how you view your own progress in the internship. This is important to provide, especially if your mentor has previously asked for an extension for your internship. The feedback form also offers a way for interns to request additional help or support.</p>
 		<p>The feedback is private and completely optional. Your feedback about your mentors will only be seen by the Outreachy organizers. We will discuss the feedback with you before contacting your mentors about how to improve their mentorship.</p>
 
 		{% if internship.is_initial_feedback_on_intern_open %}
