--- a/outreachyhome/templates/sass/application.scss
+++ b/outreachyhome/templates/sass/application.scss
@@ -2,6 +2,13 @@ body {
   margin-top: 5em;
 }
 
+.email-preview {
+  margin-bottom: 1ex;
+}
+.email-preview pre {
+  white-space: pre-wrap;
+}
+
 // Django automatically applies a 'helptext' class in forms;
 // Bootstrap wants us to use other classes instead; so we
 // let SCSS wire one to the other.
