Add week 3 email & blog prompt "Everybody struggles"
Add email sending reminder to staff dashboard.

--- a/home/templates/home/snippet/dashboard_staff.html
+++ b/home/templates/home/snippet/dashboard_staff.html
@@ -102,6 +102,16 @@ you can send an email to the announcements mailing list to remind applicants of 
 
 <hr>
 
+<p>Week 3: Topic is "Everybody Struggles." Start a conversation on the <a href="{{ current_round.week_three_stuck_chat_url }}">Outreachy topic URL</a>. Send another blog post prompt:
+<ul>
+	<li>Send the email after {{ current_round.internship_week_three_email_deadline }}.</li>
+</ul>
+</p>
+
+<p><a href="{% url 'email-internship-week-three' %}"><input class="btn btn-success" value="Week 3 Email" /></a>
+
+<hr>
+
 <h1>Statistics for sponsors</h1>
 
 <ul>
