Export initial feedback from mentors for Conservancy accounting
Outreachy mentors are asked to provide feedback for interns in order to
authorize payment for the $1,000 initial stipend. All mentors are
required to give a private progress report on how their intern is doing.

When providing feedback, mentors can ask for an extension of the
internship. They will give a date as to when they should next be asked for
feedback. Outreachy organizers will later adjust the end dates of the
internships accordingly.

Mentors can also ask for the internship to be terminated, and give a
reason for the internship termination.

The JSON dictionary that is exported is as follows for each intern:

'intern public name': string,
'intern legal name': string,
'intern email address': string,
'community': string,
'mentor public name': string,
'mentor legal name': string,
'mentor email address': string,
'feedback submitted on': date,
'feedback submitted from': IP address,
'payment approved': boolean,
'progress report': string,
'extension requested': boolean,
'extension date': date,
'termination requested': boolean,
'termination reason': string,

--- a/home/templates/home/snippet/dashboard_staff.html
+++ b/home/templates/home/snippet/dashboard_staff.html
@@ -311,7 +311,7 @@ you can send an email to the announcements mailing list to remind applicants of 
 	<h2>Intern Progress</h2>
 	<p>Standard mentor feedback dates:
 	<ul>
-		<li>{{ current_round.initialfeedback }} - Initial feedback is due</li>
+		<li>{{ current_round.initialfeedback }} - Initial feedback is due <a href="{% url 'initial-feedback-export' round_slug=current_round.slug %}"><button class="btn btn-success">Export Initial Feedback</button></a></li>
 		<li>{{ current_round.midfeedback }} - Mid-point feedback is due</li>
 		<li>{{ current_round.finalfeedback }} - Final feedback is due</li>
 	</ul>
