Add latest blog post about the application period to list of resources on project selection page

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -49,6 +49,7 @@ Outreachy Internships | Apply | Pick a Project
 <p>You can read about what it's like to apply to Outreachy:
 <ul>
 	<li><a href="/apply/#how-to-apply">Outreachy's application process</a></li>
+	<li><a href="/blog/outreachy-interns-talk-about-application-process/">December 2018 Outreachy interns talk about the application process</a></li>
 	<li><a href="https://medium.freecodecamp.org/get-the-most-out-of-your-outreachy-application-process-937d4a8ab4bf">Get the most out of your Outreachy intern application process</a></li>
 	<li><a href="https://medium.freecodecamp.org/outreachy-what-how-why-4fb60d10a228">How I got into the Outreachy open source internship program</a></li>
 	<li><a href="https://blog.ihsavru.me/node/9">Application tips from an Outreachy intern who just completed their internship</a></li>
